--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [workspace]
-members = [".", "entity", "migration"]
+members = [".", "entity"]
 
 [dependencies]
 dotenvy = "0.15.7"
