--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [workspace]
-members = [".", "entity"]
+members = [".", "entity", "web"]
 
 [dependencies]
 dotenvy = "0.15.7"
-sea-orm = { version =  "1.1.7", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with_time", "macros"]}
+sea-orm = { version =  "1.1.7", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-time", "macros"]}
 actix-web = "4"
 tera = "1.20.0"
 serde_json = "1.0.140"
